--- a/platformio.ini
+++ b/platformio.ini
@@ -7,11 +7,27 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+[platformio]
+default_envs = lolin_s2_mini
 
-[env:lolin_s2_mini]
-platform = espressif32
-board = lolin_s2_mini
-framework = arduino
+[common]
 lib_deps = 
 	olikraus/U8g2@^2.36.12
 	adafruit/Adafruit NeoPixel@^1.15.1
+
+[env:lolin_s2_mini]
+platform = espressif32
+framework = arduino
+board = lolin_s2_mini
+
+[env:wifi_usb_nugget]
+platform = espressif32
+framework = arduino
+board = lolin_s2_mini
+build_flags = -D WIFI_USB_NUGGET
+
+[env:heltec_wifi_lora_32_V3]
+platform = espressif32
+framework = arduino
+board = heltec_wifi_lora_32_V3
+build_flags = -D HELTEC_LORA_V3
