Add wowkwi for convienience

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,22 +8,24 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
-default_envs = lolin_s2_mini
+default_envs = emulator
 
-[common]
-lib_deps = 
-	olikraus/U8g2@^2.36.12
-	adafruit/Adafruit NeoPixel@^1.15.1
-
-[env:lolin_s2_mini]
+[env:emulator]
 platform = espressif32
 framework = arduino
 board = lolin_s2_mini
+lib_deps = 
+	olikraus/U8g2@^2.36.12
+	adafruit/Adafruit NeoPixel@^1.15.1
+build_flags = -D EMULATOR
 
 [env:wifi_usb_nugget]
 platform = espressif32
 framework = arduino
 board = lolin_s2_mini
+lib_deps = 
+	olikraus/U8g2@^2.36.12
+	adafruit/Adafruit NeoPixel@^1.15.1
 build_flags = -D WIFI_USB_NUGGET
 
 [env:heltec_wifi_lora_32_V3]
@@ -31,3 +33,6 @@ platform = espressif32
 framework = arduino
 board = heltec_wifi_lora_32_V3
 build_flags = -D HELTEC_LORA_V3
+lib_deps = 
+	olikraus/U8g2@^2.36.12
+	adafruit/Adafruit NeoPixel@^1.15.1
