--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
-default_envs = emulator
+default_envs = wifi_usb_nugget
 
 [env:emulator]
 platform = espressif32
@@ -36,3 +36,4 @@ build_flags = -D HELTEC_LORA_V3
 lib_deps = 
 	olikraus/U8g2@^2.36.12
 	adafruit/Adafruit NeoPixel@^1.15.1
+monitor_speed = 115200
