updates to draw loop

--- a/platformio.ini
+++ b/platformio.ini
@@ -27,6 +27,7 @@ lib_deps =
 	olikraus/U8g2@^2.36.12
 	adafruit/Adafruit NeoPixel@^1.15.1
 build_flags = -D WIFI_USB_NUGGET
+monitor_speed = 115200
 
 [env:heltec_wifi_lora_32_V3]
 platform = espressif32
