drop support for the nugs

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
-default_envs = wifi_usb_nugget
+default_envs = wifi_usb_feline
 
 [env:emulator]
 platform = espressif32
@@ -19,14 +19,14 @@ lib_deps =
 	adafruit/Adafruit NeoPixel@^1.15.1
 build_flags = -D EMULATOR
 
-[env:wifi_usb_nugget]
+[env:wifi_usb_feline]
 platform = espressif32
 framework = arduino
 board = lolin_s2_mini
 lib_deps = 
 	olikraus/U8g2@^2.36.12
 	adafruit/Adafruit NeoPixel@^1.15.1
-build_flags = -D WIFI_USB_NUGGET
+build_flags = -D WIFI_USB_FELINE
 monitor_speed = 115200
 
 [env:heltec_wifi_lora_32_V3]
