--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
-default_envs = wifi_usb_feline
+default_envs = heltec_wifi_lora_32_V3
 
 [env:emulator]
 platform = espressif32
