--- a/platformio.ini
+++ b/platformio.ini
@@ -8,19 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
-default_envs = heltec_wifi_lora_32_V3
+default_envs = emulator
+
 [env:emulator]
 platform = espressif32
 framework = arduino
 board = lolin_s2_mini
 lib_deps = 
 	olikraus/U8g2@^2.36.12
-	adafruit/Adafruit NeoPixel@^1.15.1
 build_flags = -D EMULATOR
-  -DconfigUSE_TRACE_FACILITY=1
-  -DconfigGENERATE_RUN_TIME_STATS=1
-  -DINCLUDE_uxTaskGetSystemState=1
-  -DconfigUSE_STATS_FORMATTING_FUNCTIONS=1
 
 [env:wifi_usb_feline]
 platform = espressif32
@@ -28,12 +24,7 @@ framework = arduino
 board = lolin_s2_mini
 lib_deps = 
 	olikraus/U8g2@^2.36.12
-	adafruit/Adafruit NeoPixel@^1.15.1
 build_flags = -D WIFI_USB_FELINE
-  -DconfigUSE_TRACE_FACILITY=1
-  -DconfigGENERATE_RUN_TIME_STATS=1
-  -DINCLUDE_uxTaskGetSystemState=1
-  -DconfigUSE_STATS_FORMATTING_FUNCTIONS=1
 monitor_speed = 115200
 
 [env:heltec_wifi_lora_32_V3]
@@ -41,11 +32,6 @@ platform = espressif32
 framework = arduino
 board = heltec_wifi_lora_32_V3
 build_flags = -D HELTEC_LORA_V3
-  -DconfigUSE_TRACE_FACILITY=1
-  -DconfigGENERATE_RUN_TIME_STATS=1
-  -DINCLUDE_uxTaskGetSystemState=1
-  -DconfigUSE_STATS_FORMATTING_FUNCTIONS=1
 lib_deps = 
 	olikraus/U8g2@^2.36.12
-	adafruit/Adafruit NeoPixel@^1.15.1
 monitor_speed = 115200
