fix serial on wifi feline

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
-default_envs = emulator
-
+default_envs = wifi_usb_feline
 [env:emulator]
 platform = espressif32
 framework = arduino
@@ -25,8 +24,8 @@ board = lolin_s2_mini
 lib_deps = 
 	olikraus/U8g2@^2.36.12
 build_flags = -D WIFI_USB_FELINE
-monitor_speed = 115200
-
+	-D ARDUINO_USB_CDC_ON_BOOT=1
+monitor_speed = 921600
 [env:heltec_wifi_lora_32_V3]
 platform = espressif32
 framework = arduino
