console transparent rtos task

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
-default_envs = wifi_usb_feline
+default_envs = heltec_wifi_lora_32_V3
 [env:emulator]
 platform = espressif32
 framework = arduino
@@ -31,6 +31,6 @@ platform = espressif32
 framework = arduino
 board = heltec_wifi_lora_32_V3
 build_flags = -D HELTEC_LORA_V3
-lib_deps = 
+lib_deps = -
 	olikraus/U8g2@^2.36.12
 monitor_speed = 115200
