remove dead code

--- a/platformio.ini
+++ b/platformio.ini
@@ -7,31 +7,30 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+
 [platformio]
-default_envs = heltec_wifi_lora_32_V3
+default_envs = wifi_usb_feline
+
 [env:emulator]
 platform = espressif32
 framework = arduino
 board = lolin_s2_mini
-lib_deps = 
-	olikraus/U8g2@^2.36.12
+lib_deps = olikraus/U8g2@^2.36.12
 build_flags = -D EMULATOR
 
 [env:wifi_usb_feline]
 platform = espressif32
 framework = arduino
 board = lolin_s2_mini
-lib_deps = 
-	olikraus/U8g2@^2.36.12
+lib_deps = olikraus/U8g2@^2.36.12
 build_flags = -D WIFI_USB_FELINE
 	-D ARDUINO_USB_CDC_ON_BOOT=1
-monitor_speed = 921600
+monitor_speed = 115200
 
 [env:heltec_wifi_lora_32_V3]
 platform = espressif32
 framework = arduino
 board = heltec_wifi_lora_32_V3
 build_flags = -D HELTEC_LORA_V3
-lib_deps = -
-	olikraus/U8g2@^2.36.12
-monitor_speed = 921600
+lib_deps = olikraus/U8g2@^2.36.12
+monitor_speed = 115200
