--- a/platformio.ini
+++ b/platformio.ini
@@ -15,22 +15,27 @@ default_envs = wifi_usb_feline
 platform = espressif32
 framework = arduino
 board = lolin_s2_mini
-lib_deps = olikraus/U8g2@^2.36.12
+lib_deps = 
+	olikraus/U8g2@^2.36.12
+	adafruit/Adafruit NeoPixel@^1.15.1
 build_flags = -D EMULATOR
 
 [env:wifi_usb_feline]
 platform = espressif32
 framework = arduino
 board = lolin_s2_mini
-lib_deps = olikraus/U8g2@^2.36.12
+lib_deps = 
+	olikraus/U8g2@^2.36.12
+	adafruit/Adafruit NeoPixel@^1.15.1
 build_flags = -D WIFI_USB_FELINE
 	-D ARDUINO_USB_CDC_ON_BOOT=1
-monitor_speed = 115200
-
+monitor_speed = 921600
 [env:heltec_wifi_lora_32_V3]
 platform = espressif32
 framework = arduino
 board = heltec_wifi_lora_32_V3
 build_flags = -D HELTEC_LORA_V3
-lib_deps = olikraus/U8g2@^2.36.12
+lib_deps = 
+	olikraus/U8g2@^2.36.12
+	adafruit/Adafruit NeoPixel@^1.15.1
 monitor_speed = 115200
