--- a/platformio.ini
+++ b/platformio.ini
@@ -29,6 +29,7 @@ lib_deps =
 	adafruit/Adafruit NeoPixel@^1.15.1
 build_flags = -D WIFI_USB_FELINE
 	-D ARDUINO_USB_CDC_ON_BOOT=1
+	-D NEOPIXEL_PIN=12
 monitor_speed = 921600
 [env:heltec_wifi_lora_32_V3]
 platform = espressif32
