--- a/platformio.ini
+++ b/platformio.ini
@@ -27,9 +27,18 @@ board = lolin_s2_mini
 lib_deps = 
 	olikraus/U8g2@^2.36.12
 	adafruit/Adafruit NeoPixel@^1.15.1
+	
 build_flags = -D WIFI_USB_FELINE
 	-D ARDUINO_USB_CDC_ON_BOOT=1
+    -Ilib/lua/include
+    -DLUA_32BITS
+    -DLUA_USE_C89
+    -DLUA_USE_LONGLONG
+    -DLUA_COMPAT_5_3
+    -Os
+    -fdata-sections -ffunction-sections -Wl,--gc-sections
 monitor_speed = 921600
+
 [env:heltec_wifi_lora_32_V3]
 platform = espressif32
 framework = arduino
