--- a/platformio.ini
+++ b/platformio.ini
@@ -1,7 +1,8 @@
-[platformio]
-default_envs = wifi_usb_feline
-
 # Generic device for a lolin s2 mini with a SH1106 I2C Display + neopixel
+[platformio]
+default_envs = rp2350
+
+
 [env:wifi_usb_feline]
 platform = espressif32
 framework = arduino
@@ -25,7 +26,7 @@ platform = espressif32
 framework = arduino
 board = heltec_wifi_lora_32_V3
 build_flags = -D HELTEC_LORA_V3
-lib_deps = 	-Ilib/lua/include
+    -Ilib/lua/include
     -DLUA_32BITS
     -DLUA_USE_C89
     -DLUA_USE_LONGLONG
@@ -34,3 +35,18 @@ lib_deps = 	-Ilib/lua/include
     -fdata-sections -ffunction-sections -Wl,--gc-sections
 monitor_speed = 115200
 monitor_port = /dev/ttyUSB0
+
+
+[env:rp2350]
+platform = https://github.com/maxgerhardt/platform-raspberrypi.git
+framework = arduino
+board = rpipico2
+board_build.core = earlephilhower
+build_flags = -D ARDUINO_USB_CDC_ON_BOOT=1
+    -Ilib/lua/include
+    -DLUA_32BITS
+    -DLUA_USE_C89
+    -DLUA_USE_LONGLONG
+    -DLUA_COMPAT_5_3
+    -Os
+    -fdata-sections -ffunction-sections -Wl,--gc-sections
