--- a/platformio.ini
+++ b/platformio.ini
@@ -1,22 +1,32 @@
-[platformio]
-default_envs = wifi_usb_feline
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
 
-# Generic device for a lolin s2 mini with a SH1106 I2C Display + neopixel
+[platformio]
+default_envs = heltec_wifi_lora_32_V3
+
 [env:wifi_usb_feline]
 platform = espressif32
 framework = arduino
 board = lolin_s2_mini
 lib_deps = 
 	adafruit/Adafruit NeoPixel@^1.15.1
+	adafruit/SdFat - Adafruit Fork@^2.3.54
 build_flags = -D WIFI_USB_FELINE
 	-D ARDUINO_USB_CDC_ON_BOOT=1
-    -Ilib/lua/include
-    -DLUA_32BITS
-    -DLUA_USE_C89
-    -DLUA_USE_LONGLONG
-    -DLUA_COMPAT_5_3
-    -Os
-    -fdata-sections -ffunction-sections -Wl,--gc-sections
+	-Ilib/lua/include
+	-DLUA_32BITS
+	-DLUA_USE_C89
+	-DLUA_USE_LONGLONG
+	-DLUA_COMPAT_5_3
+	-Os
+	-fdata-sections -ffunction-sections -Wl,--gc-sections
 monitor_speed = 921600
 monitor_port = /dev/ttyACM0
 
@@ -25,12 +35,13 @@ platform = espressif32
 framework = arduino
 board = heltec_wifi_lora_32_V3
 build_flags = -D HELTEC_LORA_V3
-lib_deps = 	-Ilib/lua/include
-    -DLUA_32BITS
-    -DLUA_USE_C89
-    -DLUA_USE_LONGLONG
-    -DLUA_COMPAT_5_3
-    -Os
-    -fdata-sections -ffunction-sections -Wl,--gc-sections
+	-Ilib/lua/include
+	-DLUA_32BITS
+	-DLUA_USE_C89
+	-DLUA_USE_LONGLONG
+	-DLUA_COMPAT_5_3
+	-Os
+	-fdata-sections -ffunction-sections -Wl,--gc-sections
 monitor_speed = 115200
 monitor_port = /dev/ttyUSB0
+lib_deps = adafruit/SdFat - Adafruit Fork@^2.3.54
