lua pseudo binaries

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = heltec_wifi_lora_32_V3
+default_envs = wifi_usb_feline
 
 [env:wifi_usb_feline]
 platform = espressif32
