--- a/platformio.ini
+++ b/platformio.ini
@@ -16,8 +16,6 @@ platform = espressif32
 framework = arduino
 board = lolin_s2_mini
 lib_deps = 
-	adafruit/Adafruit NeoPixel@^1.15.1
-	adafruit/SdFat - Adafruit Fork@^2.3.54
 build_flags = -D WIFI_USB_FELINE
 	-D ARDUINO_USB_CDC_ON_BOOT=1
 	-Ilib/lua/include
@@ -29,19 +27,5 @@ build_flags = -D WIFI_USB_FELINE
 	-fdata-sections -ffunction-sections -Wl,--gc-sections
 monitor_speed = 921600
 monitor_port = /dev/ttyACM0
-
-[env:heltec_wifi_lora_32_V3]
-platform = espressif32
-framework = arduino
-board = heltec_wifi_lora_32_V3
-build_flags = -D HELTEC_LORA_V3
-	-Ilib/lua/include
-	-DLUA_32BITS
-	-DLUA_USE_C89
-	-DLUA_USE_LONGLONG
-	-DLUA_COMPAT_5_3
-	-Os
-	-fdata-sections -ffunction-sections -Wl,--gc-sections
-monitor_speed = 115200
-monitor_port = /dev/ttyUSB0
-lib_deps = adafruit/SdFat - Adafruit Fork@^2.3.54
+board_build.partitions = partitions.csv
+board_upload.flash_size = 4MB
