--- a/platformio.ini
+++ b/platformio.ini
@@ -29,3 +29,5 @@ monitor_speed = 921600
 monitor_port = /dev/ttyACM0
 board_build.partitions = partitions.csv
 board_upload.flash_size = 4MB
+extra_scripts = build.py
+ 
