lua cache and use progmem

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [platformio]
 default_envs = wifi_usb_feline
-
+extra_scripts = pre:pre_build.py
 [env:wifi_usb_feline]
 platform = espressif32
 framework = arduino
@@ -29,5 +29,3 @@ monitor_speed = 921600
 monitor_port = /dev/ttyACM0
 board_build.partitions = partitions.csv
 board_upload.flash_size = 4MB
-extra_scripts = build.py
- 
