simple shell in cpp for now

--- a/platformio.ini
+++ b/platformio.ini
@@ -30,3 +30,4 @@ monitor_speed = 921600
 monitor_port = /dev/ttyACM0
 board_build.partitions = partitions.csv
 board_upload.flash_size = 4MB
+extra_scripts = pre:pre_build.py
