--- a/platformio.ini
+++ b/platformio.ini
@@ -10,14 +10,17 @@
 
 [platformio]
 default_envs = wifi_usb_feline
-extra_scripts = pre:pre_build.py
 
 [env:wifi_usb_feline]
 platform = espressif32
 framework = arduino
 board = lolin_s2_mini
 lib_deps = 
+	adafruit/Adafruit NeoPixel@^1.15.2
+	olikraus/U8g2@^2.36.14
+	etlcpp/Embedded Template Library@^20.44.1
 build_flags = -D WIFI_USB_FELINE
+	-std=gnu++17
 	-D ARDUINO_USB_CDC_ON_BOOT=1
 	-Ilib/lua/include
 	-DLUA_32BITS
@@ -26,8 +29,6 @@ build_flags = -D WIFI_USB_FELINE
 	-DLUA_COMPAT_5_3
 	-Os
 	-fdata-sections -ffunction-sections -Wl,--gc-sections
+build_unflags = -std=gnu++11
 monitor_speed = 921600
 monitor_port = /dev/ttyACM0
-board_build.partitions = partitions.csv
-board_upload.flash_size = 4MB
-extra_scripts = pre:pre_build.py
