--- a/platformio.ini
+++ b/platformio.ini
@@ -32,3 +32,4 @@ build_flags = -D WIFI_USB_FELINE
 build_unflags = -std=gnu++11
 monitor_speed = 921600
 monitor_port = /dev/ttyACM0
+board_build.partitions = partitions.csv
