--- a/platformio.ini
+++ b/platformio.ini
@@ -19,9 +19,9 @@ lib_deps =
 	adafruit/Adafruit NeoPixel@^1.15.2
 	olikraus/U8g2@^2.36.14
 	etlcpp/Embedded Template Library@^20.44.1
-build_flags = -D WIFI_USB_FELINE
-	-std=gnu++17
-	-D ARDUINO_USB_CDC_ON_BOOT=1
+upload_port = /dev/ttyACM0
+monitor_port = /dev/ttyACM0
+build_flags = -std=gnu++17
 	-Ilib/lua/include
 	-DLUA_32BITS
 	-DLUA_USE_C89
@@ -31,5 +31,28 @@ build_flags = -D WIFI_USB_FELINE
 	-fdata-sections -ffunction-sections -Wl,--gc-sections
 build_unflags = -std=gnu++11
 monitor_speed = 921600
-monitor_port = /dev/ttyACM0
-board_build.partitions = partitions.csv
+board_build.partitions = 4MB.csv
+
+[env:heltec_wifi_lora_32_V3]
+platform = espressif32
+framework = arduino
+board = heltec_wifi_lora_32_V3
+build_flags = -std=gnu++17
+	-Ilib/lua/include
+	-DLUA_32BITS
+	-DLUA_USE_C89
+	-DLUA_USE_LONGLONG
+	-DLUA_COMPAT_5_3
+	-Os
+	-fdata-sections -ffunction-sections -Wl,--gc-sections
+build_unflags = -std=gnu++11
+board_build.mcu = esp32s3
+board_build.f_cpu = 240000000L
+board_build.partitions = 8MB.csv
+lib_deps = 
+	adafruit/Adafruit NeoPixel@^1.15.2
+	olikraus/U8g2@^2.36.14
+	etlcpp/Embedded Template Library@^20.44.1
+upload_port = /dev/ttyUSB0
+monitor_port = /dev/ttyUSB0
+monitor_speed = 115200
